--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+**/.DS_Store
 
-.DS_Store
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+/*.egg
+
+# Checkpoints
+.ipynb_checkpoints
+
