Ignored links such to keep local and gbar version

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,11 @@
 
 
 links/cotton_tifffile_path.txt
-#links/bone_vol_path.txt
-#links/bugnist_vol_path.txt
-#links/dental_implant_2_tifffolder_path.txt
-#links/dental_implant_tifffolder_path.txt
-#links/bone_proj_folder_path.txt
-#links/kideny_tifffolder_path.txt
-#links/kidney_tifffile_path.txt
+links/bone_vol_path.txt
+links/bugnist_vol_path.txt
+links/dental_implant_2_tifffolder_path.txt
+links/dental_implant_tifffolder_path.txt
+links/bone_proj_folder_path.txt
+links/kideny_tifffolder_path.txt
+links/kidney_tifffile_path.txt
 
