Still dealing with links

--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,7 @@
 # Checkpoints
 .ipynb_checkpoints
 
+# Links
+links/*
 
-links/cotton_tifffile_path.txt
-links/bone_vol_path.txt
-links/bugnist_vol_path.txt
-links/dental_implant_silk_tifffolder_path.txt
-links/dental_implant_stitched_tifffolder_path.txt
-links/bone_proj_folder_path.txt
-links/kidney_tifffolder_path.txt
-links/kidney_tifffile_path.txt
 
